[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/img_none_nine.png" type="Texture" id=1]
[ext_resource path="res://Scripts/objMenuTab.gd" type="Script" id=3]
[ext_resource path="res://Assets/FactoryEntity/Structure/Processor/img_workbench.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/img_tab_down.png" type="Texture" id=5]
[ext_resource path="res://Fonts/voxilent.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 6 )

[node name="objMenuTab" type="NinePatchRect"]
margin_right = 960.0
margin_bottom = 128.0
rect_min_size = Vector2( 960, 140 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 128, 128 )
patch_margin_left = 37
patch_margin_top = 53
patch_margin_right = 64
patch_margin_bottom = 58
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnExpand" type="TouchScreenButton" parent="."]
position = Vector2( 832, 0 )
normal = ExtResource( 5 )

[node name="ctnTitle" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_right = 397.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texIcon" type="TextureRect" parent="ctnTitle"]
margin_right = 64.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 0 )
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="labName" type="Label" parent="ctnTitle"]
margin_left = 68.0
margin_top = 40.0
margin_right = 347.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "Workbench"
uppercase = true

[node name="twnExpandTab" type="Tween" parent="."]
[connection signal="released" from="btnExpand" to="." method="_on_btnExpand_released"]
